<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Login">

    <EditText
        android:id="@+id/etAdminUID"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/adminuid"
        android:inputType="textPersonName"
        android:textColor="#040303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etAdminPass"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textColor="#040404"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAdminUID"
        app:layout_constraintVertical_bias="0.136"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#6BC2EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAdminPass"
        app:layout_constraintVertical_bias="0.263" />

</androidx.constraintlayout.widget.ConstraintLayout>